Fixed layout bugs in login page

--- a/app/client/stylus/login.styl
+++ b/app/client/stylus/login.styl
@@ -88,14 +88,11 @@
 .login-form-side-text
   color #ED3533
   font-size 0.6em
-  padding-top 10%
+  margin-top -0.4em
   position absolute
+  top 50%
   left 0
   right 0
-  top 0
-  bottom 0
-  margin auto
-  vertical-align middle
   @media (min-height:200px)
     font-size 0.9em
   @media (min-height:300px)
